test/errors/null_member_access.correct
error: null_member_access.li:2:3: member 'property' not found
│ x.property;
│ ~~~~~~~~~~
│   ^
